--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js --ignore public --ignore frontend",
+    "startnodemon": "nodemon server.js --ignore public --ignore frontend",
+    "start": "node server.js",
     "dev": "webpack -w"
   },
   "keywords": [],
